welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: ';' expected but ')' found.
    gauche());avance();droite();
            ^